--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "helmet": "^5.1.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "nanoid": "^4.0.0",
     "pg": "^8.7.3"
   },
   "eslintConfig": {
